tests/cases/literals/errors/integer-literal-too-large.ari
fn main() -> i64 {
  let number: u64 = 18446744073709551616;
  return 0;
}
